<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AAC Sample</string>

    <string name="fragment_title_post_list">My Posts</string>
    <string name="fragment_title_post_detail">Post Details</string>

    <string name="error_internal_server">Internal server error.</string>
    <string name="error_timeout">The connection to server timed out.</string>
    <string name="error_internet">Please check your internet connection and try again.</string>
    <string name="add_post">Add post</string>
    <string name="edit_post">Edit post</string>
    <string name="delete_post">Delete post</string>
    <string name="not_implemented_yet">Not implemented yet.</string>
    <string name="hint_title">Title</string>
    <string name="hint_body">Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="error_required">This field is required.</string>
    <string name="post_action_message">Post <xliff:g id="action">%s</xliff:g> successfully.</string>
    <string name="general_ui_error">Some unknown error occurred, please try again.</string>
</resources>