<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/destination_post_list">

    <fragment
        android:id="@+id/destination_post_list"
        android:name="com.mohsinsyed.aac_sample.ui.fragments.PostListFragment"
        android:label="@string/fragment_title_post_list"
        tools:layout="@layout/fragment_post_list">
        <action
            android:id="@+id/action_post_list_to_post_detail"
            app:destination="@id/destination_post_detail" />
        <action
            android:id="@+id/action_destination_post_list_to_post_editor"
            app:destination="@id/destination_post_editor" />
    </fragment>

    <fragment
        android:id="@+id/destination_post_detail"
        android:name="com.mohsinsyed.aac_sample.ui.fragments.PostDetailFragment"
        android:label="@string/fragment_title_post_detail"
        tools:layout="@layout/fragment_post_detail" />
    <fragment
        android:id="@+id/destination_post_editor"
        android:name="com.mohsinsyed.aac_sample.ui.fragments.PostEditorFragment"
        android:label="@string/add_post"
        tools:layout="@layout/fragment_post_editor" />
</navigation>